--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.3",
   "dependencies": {
     "angular": "latest", 
-    "angular-route": "latest"
+    "angular-route": "latest",
     "jquery": "latest",
     "jqueryui": "latest",
     "components-font-awesome": "latest",
